# News-Sentiment-Analyzer

./: Dockerfile  README.md  api.py  app.py  docker-compose copy.yml  docker-compose.yml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: main.yml
